--- a/src/main/resources/page/registration.fxml
+++ b/src/main/resources/page/registration.fxml
@@ -4,17 +4,18 @@
 <?import javafx.scene.effect.Reflection?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Text?>
-<BorderPane id="root" fx:controller="com.academy.fx.controller.RegistrationController"
+<BorderPane styleClass="root" fx:controller="com.academy.fx.controller.RegistrationController"
             xmlns:fx="http://javafx.com/fxml/1"
-            xmlns="http://javafx.com/javafx/2.2">
+            xmlns="http://javafx.com/javafx/2.2"
+            stylesheets="@../styles/common.css">
     <top>
-        <HBox id="hbox">
-            <Text id="text">Registration</Text>
+        <HBox styleClass="top">
+            <Text id="text" styleClass="head">Registration</Text>
         </HBox>
     </top>
 
     <center>
-        <GridPane id="grid">
+        <GridPane styleClass="form">
             <!--TODO move to css-->
             <effect>
                 <Reflection fraction="0.7f"/>
@@ -34,9 +35,9 @@
             <Label fx:id="confPasswordLbl" text="Confirm:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
             <PasswordField fx:id="confPasswordTxt" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
-            <Button fx:id="registerBtn" text="Register" GridPane.columnIndex="1" GridPane.rowIndex="5" onAction="#onClickRegisterButton"/>
+            <Button fx:id="registerBtn" styleClass="btn" text="Register" GridPane.columnIndex="1" GridPane.rowIndex="5" onAction="#onClickRegisterButton"/>
 
-            <Label fx:id="msgLbl" GridPane.columnIndex="0" GridPane.rowIndex="6" GridPane.columnSpan="2"/>
+            <Label fx:id="msgLbl" styleClass="error" GridPane.columnIndex="0" GridPane.rowIndex="6" GridPane.columnSpan="2"/>
         </GridPane>
     </center>
 
