--- a/src/main/resources/styles/common.css
+++ b/src/main/resources/styles/common.css
@@ -1,17 +1,13 @@
-Label {
-    /*-fx-font-weight: bold;*/
-}
-
-#root {
-    -fx-background-color:  linear-gradient(gray,DimGrey );
+.root {
+    -fx-background-color:  linear-gradient(gray,DimGrey);
     -fx-padding: 20px 50px 50px 50px;
 }
 
-#hbox {
+.top {
     -fx-padding: 20px 20px 20px 30px;
 }
 
-#grid {
+.form {
     -fx-background-color:  linear-gradient(lightgray, gray);
     -fx-border-color: white;
     -fx-border-radius: 20;
@@ -21,7 +17,7 @@ Label {
     -fx-hgap: 5px;
 }
 
-#text {
+.head {
     -fx-fill:  linear-gradient(orange , orangered);
     -fx-font-family: "Courier New";
     -fx-font-weight: Bold;
@@ -29,8 +25,15 @@ Label {
     -fx-effect: dropshadow( three-pass-box , black , 0,0,5,5 );
 }
 
-#msgLbl {
-    -fx-font-color: orange;
+.error {
+    -fx-text-fill: yellow;
     -fx-font-weight: bold;
     -fx-font-size: 14;
+}
+
+.btn {
+    -fx-background-radius: 30, 30, 29, 28;
+    -fx-padding: 3px 10px 3px 10px;
+    -fx-background-color: linear-gradient(darkgoldenrod, darkorange );
+    -fx-font-weight: bold;
 }
