--- a/src/main/resources/page/registration.fxml
+++ b/src/main/resources/page/registration.fxml
@@ -20,24 +20,27 @@
             <effect>
                 <Reflection fraction="0.7f"/>
             </effect>
-            <Label fx:id="firstNameLbl" text="First Name:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-            <TextField fx:id="firstNameTxt" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+            <Hyperlink fx:id="loginHl" styleClass="nav" text="LogIn" GridPane.columnIndex="0" GridPane.rowIndex="0"    onAction="#onClickLoginLink"/>
+            <Hyperlink fx:id="adminHl" styleClass="nav" text="admin" GridPane.columnIndex="1" GridPane.rowIndex="0"    onAction="#onClickAdminLink"/>
 
-            <Label fx:id="lastNameLbl" text="Last Name:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-            <TextField fx:id="lastNameTxt" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label fx:id="firstNameLbl" text="First Name:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+            <TextField fx:id="firstNameTxt" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-            <Label fx:id="mailLbl" text="E-mail:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-            <TextField fx:id="mailTxt" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label fx:id="lastNameLbl" text="Last Name:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+            <TextField fx:id="lastNameTxt" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-            <Label fx:id="passwordLbl" text="Password:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-            <PasswordField fx:id="passwordTxt" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Label fx:id="mailLbl" text="E-mail:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+            <TextField fx:id="mailTxt" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
-            <Label fx:id="confPasswordLbl" text="Confirm:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-            <PasswordField fx:id="confPasswordTxt" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Label fx:id="passwordLbl" text="Password:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+            <PasswordField fx:id="passwordTxt" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
-            <Button fx:id="registerBtn" styleClass="btn" text="Register" GridPane.columnIndex="1" GridPane.rowIndex="5" onAction="#onClickRegisterButton"/>
+            <Label fx:id="confPasswordLbl" text="Confirm:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+            <PasswordField fx:id="confPasswordTxt" GridPane.columnIndex="1" GridPane.rowIndex="5" />
 
-            <Label fx:id="msgLbl" styleClass="error" GridPane.columnIndex="0" GridPane.rowIndex="6" GridPane.columnSpan="2"/>
+            <Button fx:id="registerBtn" styleClass="btn" text="Register" GridPane.columnIndex="1" GridPane.rowIndex="6" onAction="#onClickRegisterButton"/>
+
+            <Label fx:id="msgLbl" styleClass="error" GridPane.columnIndex="0" GridPane.rowIndex="7" GridPane.columnSpan="2"/>
         </GridPane>
     </center>
 
